sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: ')' expected but ';' found.
        swap(i+1;i);
                ^AlgBubbleSort1:8: error: ';' expected but ')' found.
        swap(i+1;i);
                  ^AlgBubbleSort1:11: error: ';' expected but 'while' found.
    } while(swapped);
      ^AlgBubbleSort1:13: error: 'while' expected but '}' found.
} 
^